--- a/index.html
+++ b/index.html
@@ -205,14 +205,14 @@
           <img src="assets\Heart.jpg" alt="Diabetes & Heart Disease Prediction" class="project-img" />
           <h3>Diabetes & Heart Disease Prediction</h3>
           <p>Created a machine learning model in Python to predict diabetes and heart disease risks using healthcare datasets.</p>
-          <a href="https://gitlab.computing.dcu.ie/krishnh2/2024-mcm-CHANGE_ME" class="btn btn-read-more">Read More</a>
+          <a href="https://github.com/sanjaysathish-20/Diabetes_prediction" class="btn btn-read-more">Read More</a>
         </div>
 
         <div class="project-item">
           <img src="assets\Budget.avif" alt="Budget-Based Restaurant Finder" class="project-img" />
           <h3>Budget-Based Restaurant Finder</h3>
           <p>Built a web app using Flask, Angular, AWS (S3 & EC2), and PySpark to suggest restaurants from the Swiggy dataset based on budget and cuisine.</p>
-          <a href="#" class="btn btn-read-more">Read More</a>
+          <a href="https://github.com/sanjaysathish-20/Budget_Based_Restaurant_Finder" class="btn btn-read-more">Read More</a>
         </div>
       </div>
     </div>
