--- a/index.html
+++ b/index.html
@@ -46,125 +46,126 @@
     </div>
   </section>
 
-  <!-- About Section -->
-  <section class="about" id="about">
-    <div class="container about-content">
-      <div class="about-text">
-        <h2>About <span>Me</span></h2>
-        <p>
-          I'm Sanjay Sathish Kumar, a results-driven Computer Science graduate and aspiring Data Analyst based in Dublin, Ireland. With a strong foundation in data analytics, software engineering, and automation testing, I enjoy leveraging data to create smart, efficient, and impactful solutions.
-        </p>
-        <p>
-          I’ve worked with companies like DISYS India and Gigamon, where I gained hands-on experience in data visualization, test automation, and performance optimization. My toolkit includes Python, SQL, AWS, Robot Framework, and tools like Tableau, Zoho Analytics, and PySpark.
-        </p>
-        <p>
-          Whether I'm building machine learning models to predict health risks or developing interactive web apps on AWS, I aim to solve real-world problems with clean code, clear logic, and curiosity for emerging technologies. I'm currently pursuing an MSc in Data Analytics at Dublin City University and open to new opportunities that challenge me to grow and contribute.
-        </p>
-      </div>
-      <div class="about-img">
-        <img src="assets/IMG_6553.jpg" alt="Sanjay Sathish Kumar Profile Picture" />
-      </div>
+<!-- About Section -->
+<section class="about" id="about">
+  <div class="container about-content">
+    <div class="about-text">
+      <h2>About <span>Me</span></h2>
+      <p>
+        I'm Sanjay Sathish Kumar, a results-driven Computer Science graduate and aspiring Data Analyst based in Dublin, Ireland. With a strong foundation in data analytics, software engineering, and automation testing, I enjoy leveraging data to create smart, efficient, and impactful solutions.
+      </p>
+      <p>
+        I’ve worked with companies like Vehonitor and Gigamon, where I gained hands-on experience in cloud-based application development, backend engineering, and automation testing. My toolkit includes Python, SQL, AWS, Robot Framework, and tools like Tableau, Postman, and PySpark.
+      </p>
+      <p>
+        Whether I'm building machine learning models to predict health risks or developing interactive web apps on AWS, I aim to solve real-world problems with clean code, clear logic, and curiosity for emerging technologies. I'm currently pursuing an MSc in Data Analytics at Dublin City University and open to new opportunities that challenge me to grow and contribute.
+      </p>
     </div>
-  </section>
-
-  <!-- Skills Section -->
-  <section class="skills" id="skills">
-    <div class="container">
-      <h2 class="section-title">My <span>Skills</span></h2>
-      <div class="skills-grid">
-
-        <!-- Skill categories -->
-        <div class="skill-box">
-          <h3>Programming Languages</h3>
-          <div class="skills-list">
-            <div class="skill-item">Python</div>
-            <div class="skill-item">C</div>
-            <div class="skill-item">SQL</div>
-            <div class="skill-item">JavaScript</div>
-            <div class="skill-item">HTML</div>
-            <div class="skill-item">CSS</div>
-            <div class="skill-item">JSON</div>
-          </div>
-        </div>
-
-        <div class="skill-box">
-          <h3>Data Analytics & ML</h3>
-          <div class="skills-list">
-            <div class="skill-item">Pandas</div>
-            <div class="skill-item">PySpark</div>
-            <div class="skill-item">Tableau</div>
-            <div class="skill-item">Zoho Analytics</div>
-            <div class="skill-item">SMOTE</div>
-            <div class="skill-item">Scikit-learn</div>
-          </div>
-        </div>
-
-        <div class="skill-box">
-          <h3>Software Dev & Testing</h3>
-          <div class="skills-list">
-            <div class="skill-item">Robot Framework</div>
-            <div class="skill-item">Postman</div>
-            <div class="skill-item">REST API</div>
-            <div class="skill-item">Gerrit</div>
-            <div class="skill-item">Git</div>
-            <div class="skill-item">Jira</div>
-            <div class="skill-item">Express</div>
-          </div>
-        </div>
-
-        <div class="skill-box">
-          <h3>Cloud & DevOps</h3>
-          <div class="skills-list">
-            <div class="skill-item">AWS</div>
-            <div class="skill-item">Docker</div>
-            <div class="skill-item">VMware</div>
-            <div class="skill-item">Terraform</div>
-            <div class="skill-item">CI/CD</div>
-            <div class="skill-item">Jenkins</div>
-            <div class="skill-item">Render</div>
-            <div class="skill-item">Vercel</div>
-          </div>
-        </div>
-
-        <div class="skill-box">
-          <h3>Core Concepts</h3>
-          <div class="skills-list">
-            <div class="skill-item">Data Structures</div>
-            <div class="skill-item">Data Analysis</div>
-            <div class="skill-item">Machine Learning</div>
-            <div class="skill-item">Web Development</div>
-            <div class="skill-item">Cloud Computing</div>
-            <div class="skill-item">React</div>
-            <div class="skill-item">Node.js</div>
-          </div>
-        </div>
-
-      </div>
+    <div class="about-img">
+      <img src="assets/IMG_6553.jpg" alt="Sanjay Sathish Kumar Profile Picture" />
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Experience Section -->
-  <section class="experience" id="experience">
-    <div class="container">
-      <h2 class="section-title">My <span>Experience</span></h2>
-      <div class="timeline">
-        <div class="timeline-item">
-          <div class="timeline-date">Aug 2021 – Nov 2021</div>
-          <div class="timeline-content">
-            <h3>Developer – DISYS India Pvt Ltd</h3>
-            <p>Managed COVID-19 vaccination data, created Zoho Analytics dashboards, and optimized SQL queries to improve HR decision-making and reporting processes.</p>
-          </div>
+
+<!-- Skills Section -->
+<section class="skills" id="skills">
+  <div class="container">
+    <h2 class="section-title">My <span>Skills</span></h2>
+    <div class="skills-grid">
+      <!-- Skill categories -->
+      <div class="skill-box">
+        <h3>Programming Languages</h3>
+        <div class="skills-list">
+          <div class="skill-item">Python</div>
+          <div class="skill-item">C</div>
+          <div class="skill-item">SQL</div>
+          <div class="skill-item">JavaScript</div>
+          <div class="skill-item">HTML</div>
+          <div class="skill-item">CSS</div>
+          <div class="skill-item">JSON</div>
         </div>
-        <div class="timeline-item">
-          <div class="timeline-date">Apr 2022 – Mar 2023</div>
-          <div class="timeline-content">
-            <h3>Software Engineer – Gigamon</h3>
-            <p>Resolved legacy defects, led intern training on Robot Framework, and enhanced automation testing efficiency with Postman, caching, and Gerrit-based reviews.</p>
-          </div>
+      </div>
+
+      <div class="skill-box">
+        <h3>Data Analytics &amp; ML</h3>
+        <div class="skills-list">
+          <div class="skill-item">Pandas</div>
+          <div class="skill-item">PySpark</div>
+          <div class="skill-item">Tableau</div>
+          <div class="skill-item">Zoho Analytics</div>
+          <div class="skill-item">SMOTE</div>
+          <div class="skill-item">Scikit-learn</div>
+        </div>
+      </div>
+
+      <div class="skill-box">
+        <h3>Software Dev &amp; Testing</h3>
+        <div class="skills-list">
+          <div class="skill-item">Robot Framework</div>
+          <div class="skill-item">Postman</div>
+          <div class="skill-item">REST API</div>
+          <div class="skill-item">Gerrit</div>
+          <div class="skill-item">Git</div>
+          <div class="skill-item">Jira</div>
+          <div class="skill-item">Express</div>
+        </div>
+      </div>
+
+      <div class="skill-box">
+        <h3>Cloud &amp; DevOps</h3>
+        <div class="skills-list">
+          <div class="skill-item">AWS</div>
+          <div class="skill-item">Docker</div>
+          <div class="skill-item">VMware</div>
+          <div class="skill-item">Terraform</div>
+          <div class="skill-item">CI/CD</div>
+          <div class="skill-item">Jenkins</div>
+          <div class="skill-item">Render</div>
+          <div class="skill-item">Vercel</div>
+        </div>
+      </div>
+
+      <div class="skill-box">
+        <h3>Core Concepts</h3>
+        <div class="skills-list">
+          <div class="skill-item">Data Structures</div>
+          <div class="skill-item">Data Analysis</div>
+          <div class="skill-item">Machine Learning</div>
+          <div class="skill-item">Web Development</div>
+          <div class="skill-item">Cloud Computing</div>
+          <div class="skill-item">React</div>
+          <div class="skill-item">Node.js</div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
+
+<!-- Experience Section -->
+<section class="experience" id="experience">
+  <div class="container">
+    <h2 class="section-title">My <span>Experience</span></h2>
+    <div class="timeline">
+      <div class="timeline-item">
+        <div class="timeline-date">Mar 2021 – Mar 2022</div>
+        <div class="timeline-content">
+          <h3>Developer – Vehonitor</h3>
+          <p>Contributed to a cloud-hosted telemedicine platform by building REST APIs with Node.js/Express, managing patient and appointment data using AWS Aurora (PostgreSQL) and RDS, and monitoring serverless workflows using AWS Lambda and CloudWatch.</p>
+        </div>
+      </div>
+      <div class="timeline-item">
+        <div class="timeline-date">Apr 2022 – Mar 2023</div>
+        <div class="timeline-content">
+          <h3>Software Engineer – Gigamon</h3>
+          <p>Resolved legacy defects, led intern training on Robot Framework, and enhanced automation testing efficiency with Postman, caching, and Gerrit-based reviews.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Education Section -->
   <section class="education" id="education">
